--- a/work1/quji1234561/note/css/2.Emmet()/7.emmet语法（htm）.htm
+++ b/work1/quji1234561/note/css/2.Emmet()/7.emmet语法（htm）.htm
@@ -38,7 +38,7 @@
 
     <h1>4.直接使用.或#加上类名或id名可生成相应的div</h1>
     <div class="edu">例子：.edu tab键</div>
-    <p class="edu">若需要其他标签可先输入标签名再加.deu</p>
+    <p class="edu">若需要其他标签可先输入标签名再加.edu</p>
 
     <h1>5.可以使用$给类名或id名排序</h1>
     <!-- p.edu$*5 -->
