--- a/work1/quji1234561/note/css/5.浮动和定位/28.定位模式.htm
+++ b/work1/quji1234561/note/css/5.浮动和定位/28.定位模式.htm
@@ -11,6 +11,9 @@
             padding: 0;
         }
 
+        body {
+            width: 1200px;
+        }
 
         p {
             font-size: 20px;
