--- a/work1/quji1234561/note/css/5.浮动和定位/练习.htm
+++ b/work1/quji1234561/note/css/5.浮动和定位/练习.htm
@@ -11,6 +11,11 @@
             padding: 0;
         }
 
+        body {
+            width: 1200px;
+            background: grey;
+        }
+
         a {
             border-left: 3px solid #000;
             padding-left: 10px;
