add:work1 correct2

--- a/work1/quji1234561/work1/work1.htm
+++ b/work1/quji1234561/work1/work1.htm
@@ -12,7 +12,7 @@
 
     <!-- 导航栏 -->
 
-    <div id="nav" class="w">
+    <div id="nav">
         <ul>
             <li> <a href="#character">人物介绍</a></li>
             <li class="a-works"> <a href="#works">系列作品</a></li>
@@ -23,14 +23,14 @@
 
     <!-- 简介 -->
 
-    <div id="brief" class="w">
+    <div id="brief">
         <div id="all"></div>
         <p>海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。</p>
     </div>
 
     <!-- 人物介绍 -->
 
-    <div id="character" class="w">
+    <div id="character">
         <div id="hai">
             <div class="character-text">
                 <h4>海绵宝宝</h4>
@@ -56,7 +56,7 @@
 
     <!-- 系列作品 -->
 
-    <div id="works" class="w">
+    <div id="works">
         <div class="title">
             <span class="name">系列</span>
             <span class="date">日期</span>
@@ -93,7 +93,7 @@
 
     <!-- 我们相关 -->
 
-    <div id="feedback" class="w">
+    <div id="feedback">
         <form>
             <textarea placeholder="对我们的建议"></textarea>
             <input type="submit" id="submit">
@@ -101,7 +101,7 @@
 
     </div>
 
-    <footer class="w">
+    <footer>
         <p>by 黄炳文</p>
     </footer>
 </body>
