add: complete work1

--- a/work1/LiuYuchenRick/hmbb.html
+++ b/work1/LiuYuchenRick/hmbb.html
@@ -9,36 +9,34 @@
 <link rel="stylesheet" href="hmbb.css">
 
 <body>
-    <div class="box" id="box">
+    <div class="box" id="nav">
         <div class="box nav">
             <ul>
-                <li class="rw">
-
-                    <a href="#box">人物介绍</a>
-
+                <li class="Character-introduction">
+                    <a href="#nav">人物介绍</a>
                 </li>
-                <li class="xl">
+                <li class="Series-works">
                     <a href="#seriestable">系列作品</a>
                 </li>
-                <li class="wm">
-                    <a href="#textt">我们相关</a>
+                <li class="About-us">
+                    <a href="#about-us">我们相关</a>
                 </li>
             </ul>
         </div>
-        <div class="box jianjie">
+        <div class="box introduction">
             <div class="all">
                 <img src="images/all.jpeg" />
             </div>
-            <p class="jieshao">
+            <p class="Introductory-text">
                 海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下，那里是一个没有忧愁的世界，住着一群快乐的海洋生物。
             </p>
         </div>
     </div>
 
-    <div class="box renwu">
+    <div class="box Character">
         <ul>
-            <li class="hmbb">
-                <div class="hmbbjs">
+            <li class="SpongeBob">
+                <div class="SpongeBob-intro">
                     <h4>海绵宝宝</h4>
                     <p>
                     <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来欢乐。</p>
@@ -46,15 +44,15 @@
                 </div>
                 <img src="images/haimianbaobao.jpeg" />
             </li>
-            <li class="pdx">
-                <div class="pdxjs">
+            <li class="starfish">
+                <div class="starfish-intro">
                     <h4>派大星</h4>
                     <p>粉红色的海星，很可爱，和海绵宝宝交情最好。</p>
                 </div>
                 <img src="images/paidaxing.jpeg" />
             </li>
-            <li class="zyg">
-                <div class="zygjs">
+            <li class="octopus">
+                <div class="octopus-intro">
                     <h4>章鱼哥</h4>
                     <p>大鼻子章鱼，对艺术有执着的追求，本质上是一个善良且有正义感的章鱼。</p>
                 </div>
@@ -65,9 +63,9 @@
     <div class="box seriestable" id="seriestable">
         <table>
             <tr>
-                <th class="xilie">系列</th>
-                <th class="riqi">日期</th>
-                <th class="jishu">集数</th>
+                <th class="series">系列</th>
+                <th class="date">日期</th>
+                <th class="episode">集数</th>
             </tr>
             <tr>
                 <td class="td1">海绵宝宝</td>
@@ -91,10 +89,8 @@
             </tr>
         </table>
     </div>
-    <div class="box textt" id="textt">
-        <textarea>
-            对我们的建议
-        </textarea>
+    <div class="box suggestion" id="about-us">
+        <textarea>对我们的建议</textarea>
         <a href="#">
             提交
         </a>
