add: complete work1

--- a/work1/LiuYuchenRick/hmbb.html
+++ b/work1/LiuYuchenRick/hmbb.html
@@ -12,13 +12,13 @@
     <div class="box" id="nav">
         <div class="box nav">
             <ul>
-                <li class="Character-introduction">
+                <li class="character-introduction">
                     <a href="#nav">人物介绍</a>
                 </li>
-                <li class="Series-works">
+                <li class="series-works">
                     <a href="#seriestable">系列作品</a>
                 </li>
-                <li class="About-us">
+                <li class="about-us">
                     <a href="#about-us">我们相关</a>
                 </li>
             </ul>
@@ -33,10 +33,10 @@
         </div>
     </div>
 
-    <div class="box Character">
+    <div class="box character">
         <ul>
-            <li class="SpongeBob">
-                <div class="SpongeBob-intro">
+            <li class="spongeBob">
+                <div class="spongeBob-intro">
                     <h4>海绵宝宝</h4>
                     <p>
                     <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来欢乐。</p>
@@ -90,7 +90,7 @@
         </table>
     </div>
     <div class="box suggestion" id="about-us">
-        <textarea>对我们的建议</textarea>
+        <textarea placeholder="对我们的建议"></textarea>
         <a href="#">
             提交
         </a>
