--- a/work1/Kikikisum/index.html
+++ b/work1/Kikikisum/index.html
@@ -30,7 +30,7 @@
                 <img src="images/haimianbaobao.jpeg" title="海绵宝宝">
             </div>
         </div>
-        <div class="paidaxin">
+        <div class="paidaxing">
             <div class="brief" >
                 <h4 class="name">派大星</h4>
                 <p>粉红色的海星，很可爱，和海绵宝宝交情最好。</p>
