--- a/work1/helloworld180/海绵宝宝/海绵宝宝2.html
+++ b/work1/helloworld180/海绵宝宝/海绵宝宝2.html
@@ -72,7 +72,7 @@
 
     <div class="null2"></div>
 
-    <textarea id="three">对我们的建议</textarea>
+    <textarea id="three" placeholder="对我们的建议"></textarea>
 
     <div class="null3"></div>
 
