imporve my coding

--- a/work1/LoganZeng/task1/html/work.html
+++ b/work1/LoganZeng/task1/html/work.html
@@ -10,13 +10,13 @@
 <body>
     <div id="header">
     <div id="header1">
-        <a href="#pic">人物介绍</a>
+        <a href="#pic" style="font-family: 'Courier New', Courier, monospace;" >人物介绍</a>
     </div>
     <div  id="header2">
-        <a href="#passage">系列作品</a>
+        <a href="#passage" style="font-family: 'Courier New', Courier, monospace; margin-top: 5px;">系列作品</a>
     </div>
     <div id="header3">
-        <a href="#about">我们相关</a>
+        <a href="#about" style="font-family: 'Courier New', Courier, monospace; margin-top: 5px;">我们相关</a>
     </div>
 </div>
 <div id="intro">
@@ -61,35 +61,35 @@
 </div>
 </div>
 <div style="display: flex;margin-left: 100px;">
-<div style="background-color: rgb(90, 168, 232); height: 30px; width: 650px;">
+<div style="background-color: rgb(153,204,255); height: 30px; width: 650px;">
 <p style="margin-top: 1px; margin-left: 250px;">海绵宝宝</p>
 </div>
-<div style="background-color: rgb(90, 204, 232);height: 30px; width: 300px;">
+<div style="background-color: rgb(135,206,235);height: 30px; width: 300px;">
     <p style="margin-top: 1px; margin-left: 130px;">2004.02.23</p>
     </div>
-    <div style="background-color: rgb(39, 18, 196);height: 30px;width: 150px;">
+    <div style="background-color: rgb(102,153,204);height: 30px;width: 150px;">
         <p style="margin-top: 1px; margin-left: 60px;">60集</p>
         </div>
 </div>
 <div style="display: flex;margin-left: 100px;">
-    <div style="background-color: rgb(90, 168, 232); height: 30px; width: 650px;">
+    <div style="background-color: rgb(153,204,255); height: 30px; width: 650px;">
     <p style="margin-top: 1px; margin-left: 250px;">海绵宝宝</p>
     </div>
-    <div style="background-color: rgb(90, 204, 232);height: 30px; width: 300px;">
+    <div style="background-color: rgb(135,206,235);height: 30px; width: 300px;">
         <p style="margin-top: 1px; margin-left: 130px;">2004.02.23</p>
         </div>
-        <div style="background-color: rgb(39, 18, 196);height: 30px;width: 150px;">
+        <div style="background-color: rgb(102,153,204);height: 30px;width: 150px;">
             <p style="margin-top: 1px; margin-left: 60px;">60集</p>
             </div>
     </div>
     <div style="display: flex;margin-left: 100px;">
-        <div style="background-color: rgb(90, 168, 232); height: 30px; width: 650px;">
+        <div style="background-color:rgb(153,204,255); height: 30px; width: 650px;">
         <p style="margin-top: 1px; margin-left: 250px;">海绵宝宝</p>
         </div>
-        <div style="background-color: rgb(90, 204, 232);height: 30px; width: 300px;">
+        <div style="background-color: rgb(135,206,235);height: 30px; width: 300px;">
             <p style="margin-top: 1px; margin-left: 130px;">2004.02.23</p>
             </div>
-            <div style="background-color: rgb(39, 18, 196);height: 30px;width: 150px;">
+            <div style="background-color: rgb(102,153,204);height: 30px;width: 150px;">
                 <p style="margin-top: 1px; margin-left: 60px;">60集</p>
                 </div>
         </div>
@@ -99,5 +99,6 @@
         <div id="input" style=" height: 30px; margin-left: 1100px;">
             <p style="font-weight: 900; text-align: center; margin-right: 2px; color: aliceblue; margin-top: 3px;padding-top: 3px;">提交</p>
          </div>
+       
 </body>
 </html>
