bugfix: work1/rsooio

--- a/work1/rsooio/index.html
+++ b/work1/rsooio/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div class="title">
+    <div class="navigation">
       <a href="#">人物介绍</a>
       <a href="#">系列作品</a>
       <a href="#">我们相关</a>
