--- a/work1/Justcodecom/w1/考核0+1.html
+++ b/work1/Justcodecom/w1/考核0+1.html
@@ -11,9 +11,9 @@
 <body>
     <div class="nav">
         <ul>
-            <em><a href="#figure">人物介绍</a></em>
-            <em><a href="#series">系列作品</a></em>
-            <em><a href="#advice">我们相关</a></em>
+            <em><a href="#chara">人物介绍</a></em>
+            <em><a href="#works">系列作品</a></em>
+            <em><a href="#our">我们相关</a></em>
         </ul>
     </div>
 <!-- 简介 -->
@@ -48,7 +48,7 @@
 
 <!-- 表格（？） -->
 
-<h3> id="works"</h3>
+<h3 id="works"</h3>
 
     <div class="he1">
         <h4>系列 </h4>
