--- a/work1/Justcodecom/w1/考核0+1.html
+++ b/work1/Justcodecom/w1/考核0+1.html
@@ -91,7 +91,7 @@
 
 <h3 id="our"</h3>
   <div class="container4">
-     <input type="text" class="c6" value="对我们的建议"/>
+     <input type="text" class="c6" placeholder="对我们的建议"/>
      <input type="submit" class="c7" value="提交"/>
   </div>
   
