--- a/work1/NICECJ/海绵宝宝网页.html
+++ b/work1/NICECJ/海绵宝宝网页.html
@@ -20,38 +20,38 @@
     <!--简介-->
     <div class= "border1">
         <div><img src= "all.jpg" class="p-border">
-        海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知晓的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。
+        <div class="jianjie">海绵宝宝是一只黄色的方形海绵,住在太平洋深处风光优美无人知道的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。</div>
         </div>
     </div>
 
     <!--作品人物介绍-->
-    <table class="gap border2">
-            <tr><td class= "yellow center" ><h4>海绵宝宝</h4>是动画片《海绵宝宝》系<br/>列中的主角，超级活泼可<br/>爱，给人带来快乐。</td>
-                <td class= "pink center" ><h4>派大星</h4>粉红色的海星，很可爱，<br/>和海绵宝宝交情很好。</td>
-                <td class= "blue center" ><h4>章鱼哥</h4>大鼻子章鱼，对艺术有执<br/>着的追求，本质上是一个<br/>善良且有正义感的章鱼。</td>
+    <table class="border2">
+            <tr ><td class= "yellow renwujieshao" ><h4>海绵宝宝</h4>是动画片《海绵宝宝》系<br/>列中的主角，超级活泼可<br/>爱，给人带来快乐。</td>
+                <td class= "pink  renwujieshao" ><h4>派大星</h4>粉红色的海星，很可爱，<br/>和海绵宝宝交情很好。</td>
+                <td class= "blue renwujieshao" ><h4>章鱼哥</h4>大鼻子章鱼，对艺术有执<br/>着的追求，本质上是一个<br/>善良且有正义感的章鱼。</td>
             </tr>
             <tr>
-                <td><img src= "haimianbaobao.jpg" alt="海绵宝宝" width="350px" /></td><td><img src= "paidaxing.jpg" alt="派大星" width="350px"/></td><td><img src= "zhangyuge.jpg" alt="章鱼哥" width="350px"/></td>          
+                <td><img src= "haimianbaobao.jpg" alt="海绵宝宝" class="picture" /></td><td><img src= "paidaxing.jpg" alt="派大星" class="picture"/></td><td><img src= "zhangyuge.jpg" alt="章鱼哥" class="picture"/></td>          
             </tr>    
     </table>
 
     <!--系类作品-->
-    <table class="gap center">
+    <table style="padding-top: 25px; padding-bottom: 25px;" class="gap center ">
         <thead>
             <tr><th>列表</th><th>日期</th><th>集数</th></tr>
         </thead> 
         <tbody>
-            <tr><td>海绵宝宝</td><td>2008年10月23日</td><td>60集</td></tr>
-            <tr><td>海绵宝宝</td><td>2008年10月23日</td><td>60集</td></tr>
-            <tr><td>海绵宝宝</td><td>2008年10月23日</td><td>60集</td></tr>
-            <tr><td>海绵宝宝</td><td>2008年10月23日</td><td>60集</td></tr>
+            <tr><td class="b1">海绵宝宝</td><td class="b2">2008年10月23日</td><td class="b3">60集</td></tr>
+            <tr><td class="b1">海绵宝宝</td><td class="b2">2008年10月23日</td><td class="b3">60集</td></tr>
+            <tr><td class="b1">海绵宝宝</td><td class="b2">2008年10月23日</td><td class="b3">60集</td></tr>
+            <tr><td class="b1">海绵宝宝</td><td class="b2">2008年10月23日</td><td class="b3">60集</td></tr>
         </tbody>
     </table>
 
     <!--建议收集-->
     <div>
-        <textarea rows="25" cols="200" placeholder="对我们的建议" ></textarea>  
-        <button type="submit">提交</button>  
+        <textarea rows="25" cols="140" placeholder="对我们的建议" ></textarea>  
+        <button type="submit" class="tijiao">提交</button>  
     </div>
 </body>
 
