--- a/work1/NICECJ/海绵宝宝网页.html
+++ b/work1/NICECJ/海绵宝宝网页.html
@@ -12,9 +12,9 @@
 
     <!--导航条-->
     <nav>
-        <a href="#">人物介绍</a>
-        <a href="#">系列作品</a>
-        <a href="#">我们相关</a>
+        <a href="#box1">人物介绍</a>
+        <a href="#box2">系列作品</a>
+        <a href="#box3">我们相关</a>
     </nav>
 
     <!--简介-->
@@ -25,7 +25,7 @@
     </div>
 
     <!--作品人物介绍-->
-    <table class="border2">
+    <table class="border2" id="box1">
             <tr ><td class= "yellow renwujieshao" ><h4>海绵宝宝</h4>是动画片《海绵宝宝》系<br/>列中的主角，超级活泼可<br/>爱，给人带来快乐。</td>
                 <td class= "pink  renwujieshao" ><h4>派大星</h4>粉红色的海星，很可爱，<br/>和海绵宝宝交情很好。</td>
                 <td class= "blue renwujieshao" ><h4>章鱼哥</h4>大鼻子章鱼，对艺术有执<br/>着的追求，本质上是一个<br/>善良且有正义感的章鱼。</td>
@@ -36,7 +36,7 @@
     </table>
 
     <!--系类作品-->
-    <table style="padding-top: 25px; padding-bottom: 25px;" class="gap center ">
+    <table style="padding-top: 25px; padding-bottom: 25px;" class="gap center " id="box2">
         <thead>
             <tr><th>列表</th><th>日期</th><th>集数</th></tr>
         </thead> 
@@ -49,7 +49,7 @@
     </table>
 
     <!--建议收集-->
-    <div>
+    <div id="box3">
         <textarea rows="25" cols="140" placeholder="对我们的建议" ></textarea>  
         <button type="submit" class="tijiao">提交</button>  
     </div>
