fix: complete work1

--- a/work1/chunt2860/index.html
+++ b/work1/chunt2860/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <nav>
-        <div><a href="#">人物介绍</a></div>
-        <div><a href="#">系列作品</a></div>
-        <div><a href="#">我们相关</a></div>
+        <div><a href="#role_intrduce">人物介绍</a></div>
+        <div><a href="#work">系列作品</a></div>
+        <div><a href="#we">我们相关</a></div>
     </nav>
     <div class="introduction">
         <img src="image/all.jpeg" alt="">
         <div>海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。</div>
     </div>
-    <div class="role">
+    <div class="role" id="role_intrduce">
         <div>
             <div>
                 <h6>海绵宝宝</h6>
@@ -38,7 +38,7 @@
             </div><img src="image/zhangyuge.jpeg" alt="">
         </div>
     </div>
-    <table>
+    <table id="work">
         <tr>
             <th>系列</th>
             <th>日期</th>
@@ -70,8 +70,8 @@
             <td>60集</td>
         </tr>
     </table>
-    <div class="advice">
-        <div><textarea name="" id="">对我们的建议</textarea></div>
+    <div class="advice" id="we">
+        <div><textarea name="" id="" placeholder="对我们的建议"></textarea></div>
         <button>提交</button>
     </div>
 </body>
