add: modify work1

--- a/work1/ZM-vin/海绵宝宝.html
+++ b/work1/ZM-vin/海绵宝宝.html
@@ -81,8 +81,8 @@
                 </tr>
             </table>
         </div>
-        <div class="bot" id="three">
-            对我们的建议
+        <div id="three">
+            <textarea class="bot" placeholder="对我们的建议"></textarea>
         </div>
         <div class="an">提交</div>
     </div>
