--- a/work1/klxiaoniu/index.html
+++ b/work1/klxiaoniu/index.html
@@ -14,20 +14,27 @@
         <li><a href="#series">系列作品</a></li>
         <li><a href="#suggestion">我们相关</a></li>
     </ul>
-    <img src="images/all.jpeg" alt="全家福">
-    <p>海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。</p>
+
+    <figure>
+        <img id="all" src="images/all.jpeg" alt="全家福">
+        <figcaption>
+            海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。
+        </figcaption>
+    </figure>
+
+    <p></p>
 
     <table id="intro">
         <tr class="text">
-            <td>
+            <td id="h">
                 <h2>海绵宝宝</h2>
                 <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
             </td>
-            <td>
+            <td id="p">
                 <h2>派大星</h2>
                 <p>粉红色的海星，很可爱，和海绵宝宝交情最好。</p>
             </td>
-            <td>
+            <td id="z">
                 <h2>章鱼哥</h2>
                 <p>大鼻子章鱼，对艺术有执着的追求，本质上是一个善良且有正义感的章鱼。</p>
             </td>
@@ -45,6 +52,8 @@
         </tr>
 
     </table>
+
+    <p></p>
 
     <table id="series">
         <tr>
@@ -68,8 +77,10 @@
             <td>1</td>
         </tr>
     </table>
+    
+    <p></p>
 
-    <input id="suggestion" type="text" placeholder="对我们的建议">
+    <textarea id="suggestion" cols="50" rows="10" placeholder="对我们的建议"></textarea>
     <input type="submit" value="提交">
 </body>
 
