fix:about arrow function

--- a/work2/quji1234561/work2/1.柯南的手表.htm
+++ b/work2/quji1234561/work2/1.柯南的手表.htm
@@ -116,9 +116,7 @@
 
     //3.按钮定格
     const btn = document.querySelector('#btn')
-    btn.addEventListener('click', function () {
-      document.querySelector('.box #red #pauseTime').innerHTML = document.querySelector('.box #blue #time').innerHTML
-    })
+    btn.addEventListener('click', () => document.querySelector('.box #red #pauseTime').innerHTML = document.querySelector('.box #blue #time').innerHTML)
 
 
 
