--- a/work2/LoganZeng/t2.html
+++ b/work2/LoganZeng/t2.html
@@ -68,9 +68,10 @@
 			console.log(sortList[j]);
 		}
         let newList = document.createElement("ul");
+        let num = ["一","二","三","四","五","六","七"];
     for (let j = 0; j <= sortList.length - 1; j++) {
         let newItem = document.createElement("li");
-        newItem.textContent = sortList[j].name+":"+sortList[j].weight+"kg";
+        newItem.textContent = "第"+num[j]+"只章鱼: "+sortList[j].name+":"+sortList[j].weight+"kg";
         newList.appendChild(newItem);
     }
     list.parentNode.replaceChild(newList, list);
