fix: skip function of work1

--- a/work1/cantback/WTA1.html
+++ b/work1/cantback/WTA1.html
@@ -79,7 +79,7 @@
         </p>
     </div>
     <!-- characters intro -->
-    <div class="intro_c">
+    <div class="intro_c" id="A">
         <div class="characters_bar" id="haimian_img">
             <p align="center" >海绵宝宝</p>
             <p class="intro">是动画片《海绵宝宝》系列动画片中的主角，超级活泼可爱，给人带来快乐</p>
@@ -99,7 +99,7 @@
         <img src="./img/zhangyuge.jpeg">
     </div>
     <!-- table -->
-     <table>
+     <table id="B">
         <thead>
                 <th style="width: 400px;">系列</th>
                 <th style="width: 400px;">日期</th>
@@ -129,7 +129,7 @@
         </tbody>
      </table>
      <!-- comment box -->
-    <textarea placeholder="对我们的建议"></textarea>
+    <textarea placeholder="对我们的建议" id="C"></textarea>
     <button type="submit" >提交</button>
 </body>
 </html>
