--- a/work1/work1 by Fzu_zwl/work.html
+++ b/work1/work1 by Fzu_zwl/work.html
@@ -140,9 +140,9 @@
         
        <!-- 第一部分 -->
         <div class="nav">
-            <span class="introduction">人物介绍</span>
-            <span class ="works">系列作品</span>
-            <span  class="contact">我们相关</span>
+            <span class="introduction"><a href="#A">人物介绍</a></span>
+            <span class ="works"><a href="#B">作品系列</a></span>
+            <span  class="contact"><a href="#C">我们相关</a></span>
         </div>
         <!-- 第二部分 -->
          <div class="firstall">
@@ -161,7 +161,7 @@
                     <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
                 </div>
             
-                <img ; src="haimianbaobao.jpeg" alt="hm" style="width: 200px;height: 200px;border-radius: 10px;">
+                <img  src="haimianbaobao.jpeg" alt="hm" style="width: 200px;height: 200px;border-radius: 10px;">
             </div>
             <div class="pdx">
                 <div class="pdxtext">
