--- a/work1/work1 by Fzu_zwl/work.html
+++ b/work1/work1 by Fzu_zwl/work.html
@@ -204,7 +204,7 @@
             <span  class="nav-title"><a href="#C">我们相关</a></span>
         </div>
         <!-- 第二部分 -->
-         <div class="firstall">
+         <div class="firstall" id="A">
             <div class="firsttext">
                 <img  src="all.jpeg "alt="all" style="border-radius: 100px;width: 200px;height: 150px; margin: 20px;">
                 
@@ -213,7 +213,7 @@
             </div>
         </div>
         <!-- 第三部分 -->
-        <div class="secondblock">
+        <div class="secondblock" id="A">
             <div class="hm">
                 <div class="hmtext">
                     <h2 >海绵宝宝</h2>
@@ -239,7 +239,7 @@
             </div> 
         </div>
         <!-- 第四部分 -->
-         <div class="table">
+         <div class="table" id="B">
             <table  width="80%" class="table1">
                 <thead>
                         <th width="50%">系列</th>
@@ -272,15 +272,17 @@
             </table>
          </div>
          <!-- 第五部分 -->
-        <div class="suggestall">
-            <div class="suggest">
-                <textarea placeholder="对我们的建议" class="suggesttext"></textarea>
-            </div> 
-            <div class="submit">
-                <form action="#">
-                    <input type="submit" value="提交" class="submitbutton">
-                </form>
-            </div>
+        <div class="suggestall" id="C">
+            <form action="#">
+                <div class="suggestall">
+                    <div class="suggest">
+                        <textarea placeholder="对我们的建议" class="suggesttext"></textarea>
+                    </div>
+                    <div class="submit">
+                        <input type="submit" value="提交" class="submitbutton">
+                    </div>
+                </div>        
+            </form>
         </div>
     </body>
 </html>
