--- a/work1/ksx919/index.html
+++ b/work1/ksx919/index.html
@@ -13,7 +13,7 @@
         <a href="#section3" class="right">我们相关</a>
         <!-- 创建三个可点击跳转的导航栏 -->
         <div class="arc-border"><!--创建一个圆弧边框，内含文字和一个图片。-->
-            <img src="all.jpeg" id="all">
+            <img src="img/all.jpeg" id="all">
             <div id="js">
                 海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下。那里是一个没有忧愁的世界，住着一群快乐的海洋生物。
             </div>
@@ -33,9 +33,9 @@
                 <p class="wz1">大鼻子章鱼，对艺术有执着的追求，本质上是一个善良且有正义感的章鱼。</p>
             </div>
             <!-- 添加海绵宝宝、派大星、章鱼哥的图片 -->
-            <img src="haimianbaobao.jpeg" id="haimianbaobao">
-            <img src="paidaxing.jpeg" id="paidaxing">
-            <img src="zhangyuge.jpeg" id="zhangyuge">
+            <img src="img/haimianbaobao.jpeg" id="haimianbaobao">
+            <img src="img/paidaxing.jpeg" id="paidaxing">
+            <img src="img/zhangyuge.jpeg" id="zhangyuge">
         </div>
         <div id="bg"><!--创建一个表格为海绵宝宝的日期和集数-->
             <a name="section2"></a>
