--- a/work1/Meiiiiheeeee/anli.html
+++ b/work1/Meiiiiheeeee/anli.html
@@ -17,7 +17,7 @@
     </nav>
 
     <div class="description">
-        <img src="../site\all (1).jpeg" class="description_img circle_img">
+        <img src="./all (1).jpeg" class="description_img circle_img">
         <p>海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下，那里是一个没有忧愁的世界，住着一群快乐的海洋生物。</p>
     </div>
 
@@ -28,21 +28,21 @@
                     <p class="role_title">海绵宝宝</p>
                     <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
                 </div>
-                <img src="../site\haimianbaobao.jpeg" class="role_img">
+                <img src="./haimianbaobao.jpeg" class="role_img">
             </div>
             <div class="role">
                 <div class="role_description paidaxing_description">
                     <p class="role_title">派大星</p>
                     <p>粉红色的海星，很可爱，和海绵宝宝交情最好。</p>
                 </div>
-                <img src="../site\paidaxing.jpeg" class="role_img">
+                <img src="./paidaxing.jpeg" class="role_img">
             </div>
             <div class="role">
                 <div class="role_description zhangyuge_description">
                     <p class="role_title">章鱼哥</p>
                     <p>大鼻子章鱼，对艺术有执着的追求，本质上是一个善良且有正义感的章鱼。</p>
                 </div>
-                <img src="../site\zhangyuge.jpeg" class="role_img">
+                <img src="./zhangyuge.jpeg" class="role_img">
             </div>
         </ul>
     </section>
