--- a/work1/shiyi11-22/海绵宝宝.html
+++ b/work1/shiyi11-22/海绵宝宝.html
@@ -11,9 +11,9 @@
         <header>
             <div class="header">
             <ul>
-            <li>人物介绍</li>
-            <li>系列作品</li> 
-            <li>我们相关</li>
+            <li><a href="#characters">人物介绍</a></li>
+            <li><a href="#series">系列作品</a></li>
+            <li><a href="#feedback">我们相关</a></li>
             </ul>
             </div>
         </header>
@@ -24,7 +24,7 @@
         </section>
 
         <!-- 人物介绍部分 -->
-        <section class="characters">
+        <section class="characters" id="characters">
             <div class="character-box yellow">
             <h3>海绵宝宝</h3>
             <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
@@ -54,7 +54,7 @@
             </div>
         </section>
         <!-- 系列作品 -->
-            <section class="series-info">
+            <section class="series-info" id="series-info">
                 <table>
                     <thead>
                         <tr>
@@ -95,8 +95,8 @@
         
         <!-- 反馈部分 -->
              <section class="feedback" id="feedback">
-                <p>对我们的建议</p>
-                <button>提交</button>
+                <textarea placeholder="对我们的建议"></textarea>
+                <button type="submit">提交</button>
              </section>
         </div>
         </div>
