add: modify work1

--- a/work1/betty11111122222/homework1/设计稿.html
+++ b/work1/betty11111122222/homework1/设计稿.html
@@ -62,7 +62,7 @@
        </tr>
      </table>
      <!--这里为建议板块-->
-<p id="suggestion">对我们的建议</p>
+<input type="text" name="suggestion" id="suggestion" required>
 <!--这里为提交按钮-->
 <input id="button"type="button" value="提交">
    
