--- a/work1/ChenXiaoming233/index.html
+++ b/work1/ChenXiaoming233/index.html
@@ -93,7 +93,7 @@
         </form>
     </div>
 
-    <a href="#head" style="color: black"><p style="text-align: center">👆回到顶部👆</p></a>
+    <a href="#header" style="color: black"><p style="text-align: center">👆回到顶部👆</p></a>
 
     <address>
         <p style="text-align: center">Pineapple House in the middle of a stone and a squid, Bikini Bottom.
