add: complete work1

--- a/work1/ksx919/index.html
+++ b/work1/ksx919/index.html
@@ -46,54 +46,56 @@
                         <th>日期</th>
                         <th>集数</th>
                     </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
-                    <tr>
-                        <td>海绵宝宝</td>
-                        <td>2008年10月23日</td>
-                        <td>60集</td>
-                    </tr>
                 </thead>
+                <tbody id="tbnr">
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                    <tr>
+                        <td>海绵宝宝</td>
+                        <td>2008年10月23日</td>
+                        <td>60集</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
         <div id="bk"><!--创建一个边框内可输入对我们的建议-->
             <a name="section3"></a>
             <br>
             <form>
-                <label for="name">对我们建议</label>
+                <label for="name"></label>
                 <input type="text" id="name" name="name" placeholder="对我们建议">
             </form>
         </div>
-        <div id="tj"><!--创建一个虚拟提交按钮-->
-            <p id="wz2">提交</p>
+        <div id="tj">
+            <button type="submit" id="submit-btn">提交</button>
         </div>
     </div>
     
