--- a/work3/GoldenCreeperJ/demo3-1.html
+++ b/work3/GoldenCreeperJ/demo3-1.html
@@ -73,8 +73,10 @@
     /* 以上代码请勿修改 */
     /* 请在下方完成你的代码 */
     .content {
-      padding: 50px 0 100% 0;
-      background-color: #f0f8ff;
+        padding: 50px 0 0 0;
+        background-color: #f0f8ff;
+        height: 100vh;
+        overflow: hidden;
     }
 
     @media screen and (min-width: 640px) {
