add:improve work1 with textarea

--- a/work1/feelin0/海绵宝宝.html
+++ b/work1/feelin0/海绵宝宝.html
@@ -22,9 +22,8 @@
         </div>
     </div>
     <!-- 人物介绍 -->
-    <div class="chara" >
+    <div class="chara" id="chara">
         <div>
-            <a name="chara"></a>
             <h4>海绵宝宝</h4>
             <p>是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
         </div>
@@ -44,9 +43,8 @@
         <div><img src="./zhangyuge.jpg" alt=""></div>
     </div>
     <!-- 系列作品栏 -->
-    <div class="series">
+    <div class="series" id="series">
         <div>
-            <a name="series"></a>
             <b>系列</b><br>
             海绵宝宝<br>
             海绵宝宝<br>
@@ -68,9 +66,7 @@
         </div>
     </div>
     <!-- 我们相关栏 -->
-    <div class="about">
-        <p><a name="about">对我们的建议</a></p>
-    </div>
+    <textarea class="about" id="about">对我们的建议</textarea>
     <div class="input">
         <div>提交</div>
     </div>
