--- a/work1/feelin0/海绵宝宝.html
+++ b/work1/feelin0/海绵宝宝.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>海绵宝宝</title>
     <link rel="stylesheet" href="./海绵宝宝.css">
 </head>
+
 <body>
     <!-- 导航栏以及设置瞄点 -->
-    <div class="daohang">        
-        <div><a href="#chara">人物介绍</a></div> 
+    <div class="daohang">
+        <div><a href="#chara">人物介绍</a></div>
         <div><a href="#series">系列作品</a></div>
         <div><a href="#about">我们相关</a></div>
     </div>
     <!-- 简要介绍栏 -->
     <div class="intro">
-        <img src="./all.jpg" >
+        <img src="./all.jpg">
         <div>
             海绵宝宝是一只黄色的方形海绵，住在太平洋深处风光优美无人知道的比基尼海滩水域下。
             那里是一个没有忧愁的世界，住着一群快乐的海洋生物。
@@ -66,8 +68,10 @@
         </div>
     </div>
     <!-- 我们相关栏 -->
-    <textarea class="about" id="about">对我们的建议</textarea>
-    <div class="input">
-        <div>提交</div>
-    </div>
+    <form action="#">
+        <textarea class="about" id="about">对我们的建议</textarea>
+        <div class="input">
+            <button>提交</button>
+        </div>
+    </form>
 </body>
