fix(work02): fix demo1 and demo2

--- a/work2/Pale-illusions/demo1.html
+++ b/work2/Pale-illusions/demo1.html
@@ -77,6 +77,8 @@
         // 设置定时器
         let timer = setInterval(update, 1000);
 
+        update();
+
         const blueBox = document.querySelector("#blue");
 
         // 鼠标移入蓝框
