--- a/work2/Pale-illusions/demo2.html
+++ b/work2/Pale-illusions/demo2.html
@@ -85,6 +85,8 @@
                   weight: parseFloat(o.querySelector('.weight').textContent)
               });
           })
+          const ul = document.querySelector("#octopus");
+          ul.remove();
           return data;
       };
 
