--- a/work2/GoldenCreeperJ/demo1.html
+++ b/work2/GoldenCreeperJ/demo1.html
@@ -69,6 +69,7 @@
         const redDiv = document.getElementById("red");
         const blueDiv = document.getElementById("blue");
         const button = document.getElementById("btn");
+        timer();
 
         function timer() {
             let now = new Date();
