--- a/work2/shiyi11-22/demo2.html
+++ b/work2/shiyi11-22/demo2.html
@@ -1,131 +1,105 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>海绵宝宝抓章鱼</title>
-  </head>
-  <style>
-    * {
-      font-size: 30px;
-    }
-  </style>
-  <body>
-    <p>
-      海绵宝宝很爱抓章鱼，可爱的学长（出题人）把章鱼哥也混在里面了，尽管他也是章鱼，但是不能抓到他。
-    </p>
-    <p>
-      现在我们要将章鱼哥先从这些章鱼中分离出来（即把这个节点从
-      <code>&lt;ul&gt;</code> 里面去掉），之后再抓章鱼。
-    </p>
-    <p>
-      海绵宝宝抓章鱼喜欢先从重量小的开始抓，请帮助可爱的海绵宝宝和可爱的学长
-    </p>
 
-    <ul id="octopus">
-      <li>
-        <span class="name">章鱼一号</span><span class="weight">30.4kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼二号</span><span class="weight">24.2kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼三号</span><span class="weight">250.3kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼四号</span><span class="weight">300.9kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼五号</span><span class="weight">120.0kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼六号</span><span class="weight">27.5kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼七号</span><span class="weight">35.4kg</span>
-      </li>
-      <li>
-        <span class="name">章鱼哥</span><span class="weight">25.5kg</span>
-      </li>
-    </ul>
+<head>
+  <meta charset="utf-8" />
+  <title>海绵宝宝抓章鱼</title>
+</head>
+<style>
+  * {
+    font-size: 30px;
+  }
+</style>
 
-    <ul id="octopus-sort">
-      <!--
+<body>
+  <p>海绵宝宝很爱抓章鱼，可爱的学长（出题人）把章鱼哥也混在里面了，尽管他也是章鱼，但是不能抓到他。</p>
+  <p>现在我们要将章鱼哥先从这些章鱼中分离出来(即把这个节点从ul里面去掉),之后再抓章鱼。</p>
+  <p>海绵宝宝抓章鱼喜欢先从重量小的开始抓，请帮助可爱的海绵宝宝和可爱的学长</p>
+
+  <ul id="octopus">
+    <li>
+      <span class="name">章鱼一号</span><span class="weight">30.4kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼二号</span><span class="weight">24.2kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼三号</span><span class="weight">250.3kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼四号</span><span class="weight">300.9kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼五号</span><span class="weight">120.0kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼六号</span><span class="weight">27.5kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼七号</span><span class="weight">35.4kg</span>
+    </li>
+    <li>
+      <span class="name">章鱼哥</span><span class="weight">25.5kg</span>
+    </li>
+  </ul>
+
+  <ul id="octopus-sort">
+    <!--
         <li>第一只章鱼：章鱼六号：27.5kg</li>
       -->
-    </ul>
+  </ul>
 
-    <button id="sort-btn">排序</button>
+  <button id="sort-btn">排序</button>
 
-    <!-- 不可以修改上述代码内容，只能在 script 标签内填写代码 -->
+  <!-- 不可以修改上述代码内容，只能在 script 标签内填写代码 -->
 
-    <script>
-      /** 把章鱼哥节点从 ul 列表中删除 */
-      function remove() {
-        // [请在此处填写代码]
-        function removeNode() {
-            const octopusList = document.getElementById("octopus");
-            const octopusBro = octopusList.querySelector('li > span.name:contains("章鱼哥")').parentElement;
-            octopusList.removeChild(octopusBro);
-      }
+  <script>
+    function remove() {
+      const octopusList = document.getElementById("octopus");
+      const octopusBros = octopusList.querySelectorAll("li");
+      octopusBros.forEach(li => {
+        if (li.querySelector('.name').textContent === "章鱼哥") {
+          octopusList.removeChild(li);
+        }
+      });
     }
-      /*
-       * 读取 id 为 octopus 的列表，获取其中章鱼名字和体重
-       * 返回一个 JSON 数组，格式见函数中示例
-       */
-      function getWeight() {
-        /*
-          data = [
-            {
-              "name": "章鱼一号",
-              "weight": 30.4
-            },
-            {
-              "name": "章鱼二号",
-              "weight": 24.2
-            },
-          ]
-        */
-        const octopusList = document.getElementById('octopus').children;
-        const data = Array.from(octopusList).map(li => {
+
+    function getWeight() {
+      const octopusList = document.getElementById('octopus').children;
+      const data = Array.from(octopusList).map(li => {
         const name = li.querySelector('.name').textContent;
         const weight = parseFloat(li.querySelector('.weight').textContent.replace('kg', ''));
         return { name, weight };
-     });
-     return data;
-      }
+      });
+      return data;
+    }
 
-      /** 按章鱼重量，对 data 进行从小到大的排序，返回排序后的数组 */
-      function getSortedOctopus(data) {
-        return data.sort((a, b) => a.weight - b.weight);
-      }
+    function getSortedOctopus(data) {
+      return data.sort((a, b) => a.weight - b.weight);
+    }
 
-      /** 将排好序的章鱼朋友输出显示到 id 为 octopus-sort 的列表中，格式见 ul 中注释 */
-      function render(data) {
-        // [请在此处填写代码]
-        const sortedList = document.getElementById('octopus-sort');
-        sortedList.innerHTML = '';
-        const chineseNum = ['一', '二', '三', '四', '五', '六', '七', '八', '九', '十'];
-        data.forEach((item,index) => {
-          const li = document.createElement('li');
-          const num = chineseNum[index];
-          li.textContent = `第${num}只章鱼：${item.name}：${item.weight}kg`;
-          sortedList.appendChild(li);
-        });
-      }
+    function render(data) {
+      const sortedList = document.getElementById('octopus-sort');
+      sortedList.innerHTML = '';
+      const chineseNum = ['一', '二', '三', '四', '五', '六', '七', '八', '九', '十'];
+      data.forEach((item, index) => {
+        const li = document.createElement('li');
+        const num = chineseNum[index];
+        li.textContent = `第${num}只章鱼：${item.name}：${item.weight}kg`;
+        sortedList.appendChild(li);
+      });
+    }
 
-      // 按钮点击事件处理函数
-      function handleButtonClick() {
-        // [请在此处填写代码]
-        const weights = getWeight();
-        const sortedWeights = getSortedOctopus(weights);
-        render(sortedWeights);
-      }
+    function handleButtonClick() {
+      remove();
+      const weights = getWeight();
+      const sortedWeights = getSortedOctopus(weights);
+      render(sortedWeights);
+    }
 
-      // 给 sort-btn 绑定一个点击事件，点击时触发 handleButton 函数
-      // 触发后在浏览器上可以看到结果
-      // [请在此处填写代码]
-      const sortBtn = document.getElementById('sort-btn');
-      sortBtn.addEventListener('click', handleButtonClick);
-    </script>
-  </body>
+    const sortBtn = document.getElementById('sort-btn');
+    sortBtn.addEventListener('click', handleButtonClick);
+  </script>
+</body>
+
 </html>
