add:complete work1

--- a/work3/yui_fakef/demo3-1.html
+++ b/work3/yui_fakef/demo3-1.html
@@ -73,7 +73,8 @@
     /* 以上代码请勿修改 */
     /* 请在下方完成你的代码 */
     .content{
-      padding:50px;
+      padding-top:50px;
+      height:100vh; /*占视窗高度的100%*/
       background-color:#f0f8ff;
     }
     @media screen and (min-width: 640px) {
