add:answer the quesion

--- a/work3/yui_fakef/demo3-2.html
+++ b/work3/yui_fakef/demo3-2.html
@@ -43,7 +43,8 @@
          document.getElementById("ip").textContent = "Failed to get IP address.";
          document.getElementById("location").textContent = "error";
     });
-
+//使用id选择器来查找结果元素是因为：1、在给定的html文件中使用id属性来标定每个要插入的元素的位置。
+// 2、id属性在整个html文档中是唯一的，因此可以保证唯一性。3、使用id选择器可以准确的找到元素。
     </script>
   </body>
 </html>
