add: complete work1 change

--- a/work1/rational456/index.html
+++ b/work1/rational456/index.html
@@ -20,16 +20,16 @@
         </div><br>
         <div class="border-2 center" id="section1">
             <div class="border-3">
-                <p style="color:white" >海绵宝宝</p>
-                <p style="color:white;text-align: left;" >是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
+                <p class="title" >海绵宝宝</p>
+                <p class="main_text" >是动画片《海绵宝宝》系列中的主角，超级活泼可爱，给人带来快乐。</p>
             </div>
             <div class="border-4 center">
-                <p style="color:white" >派大星</p>
-                <p style="color:white;text-align: left;" >粉红色的海星，很可爱，和海绵宝宝交情最好。</p>
+                <p class="title" >派大星</p>
+                <p class="main_text" >粉红色的海星，很可爱，和海绵宝宝交情最好。</p>
             </div>
             <div class="border-5">
-                <p style="color:white" >章鱼哥</p>
-                <p style="color:white;text-align: left;" >大鼻子章鱼，对艺术有执着的追求，本质上是一个善良且有正义感的章鱼。</p>
+                <p class="title" >章鱼哥</p>
+                <p class="main_text" >大鼻子章鱼，对艺术有执着的追求，本质上是一个善良且有正义感的章鱼。</p>
             </div>
         </div><br>
         <div class="border-2 center">
@@ -57,14 +57,12 @@
                 </div>
             </div>
         </div><br><br>
-        <div class="border-1 center" id="section3" style="height: 200px;">
-            <p style="text-align: left;font-size: 50%;">对我们的建议</p>
+        <div style="display:flex">
+        <textarea class="border-1 rail" id="section3" placeholder="对我们的建议"></textarea>
         </div><br>
         <div class="border-2 center">
             <div style="width: 940px;height: 50px;"></div>
-            <div class="border-6">
-                <p style="color:white;">提交</p>
-            </div>
+                <input type="submit" value="提交" class="border-6">
         </div><br><br><br>
     </body>
 </html>
