--- a/work1/nanan325/work1.html
+++ b/work1/nanan325/work1.html
@@ -98,41 +98,50 @@
 <!-- 人物简介end -->
 
  <!-- 系列作品start -->
-  <h1 id = "series-work">系列作品</h1>
-    <div class = "series">
-       <div class = "part1">
-            <h1 class = "title1">系列</h1>
-            <table class = "table1">
-                <tr><td>海绵宝宝</td></tr>
-                <tr><td>海绵宝宝</td></tr>
-                <tr><td>海绵宝宝</td></tr>
-                <tr><td>海绵宝宝</td></tr>
-                <tr><td>海绵宝宝</td></tr>
-                <tr><td>海绵宝宝</td></tr>
-            </table>
-       </div>
-       <div class = "part2">
-         <h1 class = "title2">日期</h1>
-            <table class = "table2">
-                 <tr><td>2008年10月23日</td></tr>
-                 <tr><td>2008年10月23日</td></tr>
-                 <tr><td>2008年10月23日</td></tr>
-                 <tr><td>2008年10月23日</td></tr>
-                 <tr><td>2008年10月23日</td></tr>
-                 <tr><td>2008年10月23日</td></tr>
-            </table>
-       </div>
-       <div class = "part3">
-         <h1 class = "title3">集数</h1>
-            <table class = "table3">
-               <tr><td>集数</td></tr>
-               <tr><td>集数</td></tr>
-               <tr><td>集数</td></tr>
-               <tr><td>集数</td></tr>
-               <tr><td>集数</td></tr>
-               <tr><td>集数</td></tr>
-            </table>
-       </div>
+       <h1 id="series-work">系列作品</h1>
+<div class="series">
+    <table class="series-table">
+        <thead>
+            <tr>
+                <th class="table-header">系列</th>
+                <th class="table-header">日期</th>
+                <th class="table-header">集数</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="table-data">海绵宝宝</td>
+                <td class="table-data">2008年10月23日</td>
+                <td class="table-data">60</td>
+            </tr>
+            <tr>
+                <td class="table-data">海绵宝宝</td>
+                <td class="table-data">2008年10月23日</td>
+                <td class="table-data">60</td> 
+            </tr>
+            <tr>
+                <td class="table-data">海绵宝宝</td>
+                <td class="table-data">2008年10月23日</td>
+                <td class="table-data">60</td> 
+            </tr>
+            <tr>
+                <td class="table-data">海绵宝宝</td>
+                <td class="table-data">2008年10月23日</td>
+                <td class="table-data">60</td> 
+            </tr>
+            <tr>
+                <td class="table-data">海绵宝宝</td>
+                <td class="table-data">2008年10月23日</td>
+                <td class="table-data">60</td> 
+            </tr>
+            <tr>
+                <td class="table-data">海绵宝宝</td>
+                <td class="table-data">2008年10月23日</td>
+                <td class="table-data">60</td> 
+            </tr>
+        </tbody>
+    </table>
+</div>
     </div>
 <!-- 系列作品end -->
 
