add:complete work1 correct

--- a/work1/rational456/index.html
+++ b/work1/rational456/index.html
@@ -38,30 +38,30 @@
             <img src="https://github.com/west2-online/learn-frontend/blob/2024/steps/1/zhangyuge.jpeg?raw=true" alt="zhangyuge" class="other">
         </div><br><br><br><br><br>
         <div class="border-2 center" id="section2">
-            <div style="width: 550px;height: 20px;">
+            <div class="box-1">
                 <p class="center">系列</p>
-                <div style="width: 550px;height: 105px;background-color: #99CCFF;">
+                <div class="box-2">
                     <p class="center">海绵宝宝<br>海绵宝宝<br>海绵宝宝<br>海绵宝宝<br>海绵宝宝</p>
                 </div>
             </div>
-            <div style="width: 400px;height: 20px;">
+            <div class="box-3">
                 <p class="center">日期</p>
-                <div style="width: 380px;height: 105px;background-color: #87CEEB;">
+                <div class="box-4">
                     <p class="center">2008年10月21日<br>2008年10月21日<br>2008年10月21日<br>2008年10月21日<br>2008年10月21日</p>
                 </div>
             </div>
-            <div style="width: 110px;height: 20px;">
+            <div class="box-5">
                 <p class="center">集数</p>
-                <div style="width: 110px;height: 105px;background-color: #6699CC;">
+                <div class="box-6">
                     <p class="center">60集<br>60集<br>60集<br>60集<br>60集</p>
                 </div>
             </div>
         </div><br><br>
-        <div style="display:flex">
+        <form style="display:flex">
         <textarea class="border-1 rail" id="section3" placeholder="对我们的建议"></textarea>
-        </div><br>
+        </form><br>
         <div class="border-2 center">
-            <div style="width: 940px;height: 50px;"></div>
+            <div class="box-7"></div>
                 <input type="submit" value="提交" class="border-6">
         </div><br><br><br>
     </body>
