add:complete work1

--- a/work1/Jailod/work1.html
+++ b/work1/Jailod/work1.html
@@ -54,34 +54,34 @@
         <table id="series-works">
             <thead>
                 <tr>
-                    <th>系列</th>
-                    <th>日期</th>
-                    <th>集数</th>
+                    <th scope="col">系列</th>
+                    <th scope="col">日期</th>
+                    <th scope="col">集数</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th>海绵宝宝</th>
+                    <td>海绵宝宝</td>
                     <td>2008年10月23日</td>
                     <td>60集</td>
                 </tr>
                 <tr>
-                    <th>海绵宝宝</th>
+                    <td>海绵宝宝</td>
                     <td>2008年10月23日</td>
                     <td>60集</td>
                 </tr>
                 <tr>
-                    <th>海绵宝宝</th>
+                    <td>海绵宝宝</td>
                     <td>2008年10月23日</td>
                     <td>60集</td>
                 </tr>
                 <tr>
-                    <th>海绵宝宝</th>
+                    <td>海绵宝宝</td>
                     <td>2008年10月23日</td>
                     <td>60集</td>
                 </tr>
                 <tr>
-                    <th>海绵宝宝</th>
+                    <td>海绵宝宝</td>
                     <td>2008年10月23日</td>
                     <td>60集</td>
                 </tr>
